# rollbar

./: .gitignore  LICENSE  Makefile  README.md  rollbar.cabal  stack.yaml
.circleci/: config.yml
src/Web/: Rollbar.hs
src/Web/Rollbar/: Class.hs  Internal.hs  Types.hs
test/: Encoding.hs
test/Web/Rollbar/: Test.hs
test/golden/: event-full-config-full.json  event-full-config-minimal.json  event-full.json  event-minimal-config-full.json  event-minimal-config-minimal.json  event-minimal.json
