name:                rollbar
version:             0.2.0
synopsis:            Rollbar client lib
description:         Rollbar client lib
homepage:            https://github.com/collegevine/rollbar#readme
license:             BSD3
license-file:        LICENSE
author:              CollegeVine <ivy@collegevine.com>
maintainer:          CollegeVine <ivy@collegevine.com>
copyright:           CollegeVine 2016-2018
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Rollbar
                     , Web.Rollbar.Types

  build-depends:       base
                     , mtl
                     , lens
                     , text
                     , containers
                     , aeson
                     , nano-http
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/collegevine/rollbar
