name:                rollbar
version:             0.2.0
synopsis:            Rollbar client lib
description:         Rollbar client lib
homepage:            https://github.com/collegevine/rollbar#readme
license:             BSD3
license-file:        LICENSE
author:              CollegeVine <ivy@collegevine.com>
maintainer:          CollegeVine <ivy@collegevine.com>
copyright:           CollegeVine 2016-2018
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Rollbar
                     , Web.Rollbar.Types

  build-depends:       base
                     , aeson
                     , containers
                     , lens
                     , mtl
                     , nano-http
                     , text
  ghc-options:        -Wall -Werror
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Driver.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , lens
                     , mtl
                     , rollbar
                     , tasty
                     , tasty-discover
                     , tasty-golden
                     , text
  other-modules:       Web.Rollbar.Test
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/collegevine/rollbar
